# MHSCpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
mhscript/commands/: ComamndType.h  HelloCommand.cpp  HelloCommand.h  ICommand.h  LexemKind.h  LocalFunction.cpp  LocalFunction.h  ScriptBlock.cpp  ScriptBlock.h  ScriptException.cpp  ScriptException.h  ScriptExceptionType.h  ScriptUtils.cpp  ScriptUtils.h
mhscript/commands/defs/: CmdAssign.cpp  CmdAssign.h  CmdBool.cpp  CmdBool.h  CmdElse.cpp  CmdElse.h  CmdElseIf.cpp  CmdElseIf.h  CmdEmpty.cpp  CmdEmpty.h  CmdFor.cpp  CmdFor.h  CmdGlobalFunction.cpp  CmdGlobalFunction.h  CmdIf.cpp  CmdIf.h  CmdLogic.cpp  CmdLogic.h  CmdLogicCompound.cpp  CmdLogicCompound.h  CmdMath.cpp  CmdMath.h  CmdNumeric.cpp  CmdNumeric.h  CmdReturn.cpp  CmdReturn.h  CmdUnary.cpp  CmdUnary.h  CmdVariable.cpp  CmdVariable.h  CmdWhile.cpp  CmdWhile.h
mhscript/engine/: CallArgs.cpp  CallArgs.h  Engine.cpp  Engine.h  FunctionType.h  IGlobalFunction.h  ScriptLoader.cpp  ScriptLoader.h  Variable.cpp  Variable.h
mhscript/entities/: Object.h  ObjectInt.cpp  ObjectInt.h  ObjectType.h
mhscript/objects/: ICommand.h  Object.h  ObjectBool.cpp  ObjectBool.h  ObjectInt.cpp  ObjectInt.h  ObjectType.h
mhscript/stream/: DummyStream.cpp  DummyStream.h  FileStream.cpp  FileStream.h  Stream.h
